--- a/java/rock-paper-scissors/build.gradle
+++ b/java/rock-paper-scissors/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName = "leap-year"
+archivesBaseName = "rock-paper-scissors"
 version = '1.0'
-mainClassName = "LeapYear"
+mainClassName = "RockPaperScissors"
 
 repositories {
   mavenCentral()
