--- a/java/template/build.gradle
+++ b/java/template/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-archivesBaseName = "friend-letter"
+archivesBaseName = "template"
 version = '1.0'
 mainClassName = "App"
 
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
   compile group: 'com.sparkjava', name: 'spark-core', version: '2.3'
-  testCompile group: 'junit', name: 'junit', version: '4.+'
   compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
+  testCompile group: 'junit', name: 'junit', version: '4.+'
+  testCompile group: 'org.fluentlenium', name: 'fluentlenium-core', version: '0.10.3'
+  testCompile group: 'org.fluentlenium', name: 'fluentlenium-assertj', version: '0.10.3'
 }
